--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,13 +5,9 @@ body {
 	color: #777777;
 }
 
-/*.container-fluid {
-	width: 960px;
-	align-content: center;
-}*/
-
 a {
 	color: #777777;
+	text-decoration: none;
 }
 
 a:hover { 
@@ -26,10 +22,8 @@ a:hover {
 }
 
 .name {
-	text-decoration: none;
-	font-size: 32px;
-	font-weight: bold;
-	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 44px;
+	font-family: 'Lobster', cursive;
 	background-color: #4aaaa5;
 	text-align: center;
 	display: inline-block;
@@ -48,11 +42,6 @@ a:hover {
 	display: inline-block;
 	text-align: center;
 }
-
-/*.portfolio-link {
-	border-right: 1px solid #cccccc;
-	border-left: 1px solid #cccccc;
-}*/
 
 .projects {
 	width: 100%;
@@ -81,14 +70,13 @@ span
 	padding-bottom: 10px;
 	background-color: #ffffff;
 	border: 1px solid #dddddd;
-	/*width: 650px;*/
 	}
 
 .section-header, .sidebar-header {
 	border-bottom: 3px solid #dddddd;
 	font-size: 32px;
+	font-family: 'Lato', sans-serif;
 	font-weight: bold;
-	font-family: 'Georgia', Times, Times New Roman, serif;
 	color: #4aaaa5;
 	padding-top: 15px;
 	padding-bottom: 15px;
