--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,7 +11,9 @@ a {
 }
 
 a:hover { 
-	color: #4aaaa5; 
+	/*color: #4aaaa5; */
+	color: #ffffff;
+	text-decoration: none;
 }
 
 .header {	
@@ -41,6 +43,10 @@ a:hover {
 .links {
 	display: inline-block;
 	text-align: center;
+}
+
+.links:hover {
+	background-color: #4aaaa5;
 }
 
 .projects {
@@ -102,7 +108,6 @@ p {
 	border: 1px solid #dddddd;
 	background-color: #ffffff;
 	margin-bottom: 30px;
-	/*width: 270px;*/
 }
 
 .panel-medium {
