--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -169,4 +169,19 @@ p {
 	font-size: 12px;
 }
 
+@font-face {
+    font-family: 'Myfont-Regular';
+    src: url("../fonts/Myfont-Regular.ttf") format("opentype");
+}
+
+#testingFont {
+	font-size: 42px;
+	font-family: 'Myfont-Regular';
+	color: #000000;
+	background-color: #4aaaa5;
+}
+
+.font-test {
+	background-color: #4aaaa5;
+}
 
